# picocraft

./: .gitignore  Cargo.toml  EntityFormat.md  LoginSequence.md  Priorities.md  ProposedMechanics.md  README.md  block_list.txt
.github/workflows/: ci-build-test.yml  ci-clippy-fmt.yml  ci.yml
bins/desktop/: Cargo.toml
bins/desktop/src/: logger.rs  main.rs
bins/esp/: Cargo.toml  build.rs
crates/picocraft_core/: Cargo.toml
crates/picocraft_core/src/: byteorder.rs  errors.rs  lib.rs  packet.rs  state.rs  types.rs
crates/picocraft_core/src/types/: angle.rs  array.rs  bitset.rs  bitsets.rs  boolean.rs  core.rs  cow.rs  enum_set.rs  identifier.rs  lpvec3.rs  nbt.rs  optional.rs  position.rs  prefixed_array.rs  slot.rs  string.rs  uuid.rs  varint.rs  varlong.rs  vec.rs
crates/picocraft_derive/: Cargo.toml
crates/picocraft_derive/src/: decode.rs  encode.rs  entity_pool.rs  lib.rs  packet.rs
crates/picocraft_ecs/: Cargo.toml
crates/picocraft_ecs/src/: commands.rs  component.rs  component_store.rs  components.rs  entity.rs  errors.rs  events.rs  lib.rs  pools.rs  sparse_set.rs  storage.rs  system.rs  traits.rs  world.rs
crates/picocraft_proto/: Cargo.toml
crates/picocraft_proto/src/: chunks.rs  clientbound.rs  game_profile.rs  lib.rs  protocol_version.rs  serverbound.rs
crates/picocraft_proto/src/chunks/: chunk_data.rs  light_data.rs
crates/picocraft_proto/src/clientbound/: configuration.rs  handshake.rs  login.rs  play.rs  status.rs
crates/picocraft_proto/src/clientbound/play/: chunk_data_and_update_light.rs  entities.rs  game_event.rs  initialise_world_border.rs  keep_alive_packet.rs  login_play.rs  player_info_remove.rs  player_info_update.rs  remove_entities.rs  set_center_chunk.rs  spawn_entity.rs  syncronise_player_position.rs  update_entity_pos.rs
crates/picocraft_proto/src/serverbound/: configuration.rs  handshake.rs  login.rs  play.rs  status.rs
crates/picocraft_proto/src/serverbound/configuration/: client_information.rs
crates/picocraft_proto/src/serverbound/play/: player.rs
crates/picocraft_server/: Cargo.toml  picocraft.code-workspace
crates/picocraft_server/src/: buffer.rs  channels.rs  client.rs  config.rs  errors.rs  handlers.rs  lib.rs  packet_socket.rs  server.rs  shutdown.rs  systems.rs  tick.rs
crates/picocraft_server/src/client/: connection.rs  packet_socket.rs  player.rs
crates/picocraft_server/src/handlers/: configuration.rs  handshake.rs  login.rs  play.rs  status.rs
crates/picocraft_server/src/handlers/configuration/: 2acknowledge_finish_configuration.rs  acknowledge_finish_configuration.rs  client_information.rs
crates/picocraft_server/src/handlers/play/: client_tick_end.rs  confirm_teleportation.rs  login_start.rs  player.rs
crates/picocraft_server/src/systems/: debug.rs
crates/picocraft_terrain/: Cargo.toml
crates/picocraft_terrain/src/: dimension.rs  lib.rs  noise.rs  noise_map.rs  terrain.rs  terrain_builder.rs  world.rs
crates/picocraft_terrain/src/noise/: map.rs
crates/picocraft_terrain/src/terrain/: biomes.rs  blocks.rs  chunks.rs  coordinates.rs  heightmaps.rs  light.rs  palettes.rs  spiral_iterator.rs
crates/picocraft_terrain/src/terrain/chunks/: empty_chunk.rs
crates/picocraft_terrain/src/world/: biomes.rs  chunks.rs  coordinates.rs  light.rs  palettes.rs  spiral_iterator.rs
crates/picocraft_terrain/src/world/chunks/: empty_chunk.rs
src/: lib.rs  logger.rs  main.rs
