[workspace]
members = ["crates/*", "bins/*"]
default-members = ["crates/*", "bins/desktop"]
resolver = "2"

[workspace.package]
version = "0.0.3"
edition = "2024"
repository = "https://github.com/Sycrosity/picocraft/"
# publish = true
readme = "README.md"
keywords = ["minecraft", "minecraft-server", "picocraft", "no_std"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
picocraft_core = { path = "crates/picocraft_core", version = "0.0.3" }
picocraft_derive = { path = "crates/picocraft_derive", version = "0.0.3" }
picocraft_proto = { path = "crates/picocraft_proto", version = "0.0.3" }
picocraft_ecs = { path = "crates/picocraft_ecs", version = "0.0.3" }
picocraft_terrain = { path = "crates/picocraft_terrain", version = "0.0.3" }
picocraft_server = { path = "crates/picocraft_server", version = "0.0.3" }

log = "0.4.29"
bon = { version = "3.9.0", default-features = false }
heapless = "0.9"
thiserror = { version = "2", default-features = false }
static_cell = "2.1.1"

rand = { version = "0.10.0", default-features = false, features = ["log"] }
rand_xoshiro = "0.8.0"
rand_chacha = { version = "0.10.0", default-features = false }
noise = { version = "0.9.0", default-features = false }

uuid = { version = "1.22.0", default-features = false }
base64 = { version = "0.22.1", default-features = false }

core-json = { version = "0.4.0" }
core-json-derive = { version = "0.4.1" }
core-json-traits = { version = "0.4.1" }

embedded-io = "0.7.1"
embedded-io-async = "0.7.0"

embassy-futures = { version = "0.1.2", features = ["log"] }
embassy-executor = { version = "0.9.1", features = ["log"] }
embassy-time = { version = "0.5.0", features = ["log"] }
embassy-net = { version = "0.8.0", features = ["log"] }
embassy-sync = { version = "0.7.2", features = ["log"] }

tokio = "1.50.0"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
