[package]
edition = "2024"
name = "picocraft-esp32s3"
rust-version = "1.88"
version = "0.1.0"

[[bin]]
name = "esp32s3"
path = "./src/bin/esp32s3.rs"
test = false

[[test]]
harness = false
name = "hello_test"

[lib]
test = false

[dependencies]
esp-hal = { version = "1.0.0", features = ["esp32s3", "unstable"] }

esp-rtos = { version = "0.2.0", features = [
  "embassy",
  "esp-alloc",
  "esp-radio",
  "esp32s3",
] }

esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32s3"] }

embassy-net = { version = "0.8.0", features = [
  "dhcpv4",
  "medium-ethernet",
  "tcp",
  "udp",
] }
embedded-io = "0.7.1"
embedded-io-async = "0.7.0"
esp-alloc = "0.9.0"
rtt-target = "0.6.2"
# for more networking protocol support see https://crates.io/crates/edge-net
embassy-executor = { version = "0.9.1", features = [] }
embassy-time = "0.5.0"
esp-radio = { version = "0.17.0", features = [
  "esp-alloc",
  "esp32s3",
  "smoltcp",
  "unstable",
  "wifi",
] }
smoltcp = { version = "0.12.0", default-features = false, features = [
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }

critical-section = "1.2.0"
static_cell = "2.1.1"

[dev-dependencies]
embedded-test = { version = "0.7.0", features = [
  "embassy",
  "external-executor",
  "xtensa-semihosting",
] }
