[package]
name = "picocraft_core"
# description = ""
version.workspace = true
edition.workspace = true
license.workspace = true
# homepage.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true

[dependencies]
# base64.workspace = true
core-json-derive.workspace = true
core-json-traits.workspace = true

embedded-io.workspace = true
embedded-io-async.workspace = true
heapless = { workspace = true, features = ["embedded-io-v0.7"] }
log.workspace = true
thiserror.workspace = true
uuid = { workspace = true, features = ["v3", "v4"] }

[dev-dependencies]
embedded-io.workspace = true
