[package]
name = "picocraft_derive"
# description = ""
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
repository.workspace = true

[lib]
name = "picocraft_derive"
proc-macro = true

[dependencies]
picocraft_core.workspace = true

log.workspace = true

embedded-io-async.workspace = true

syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
