[package]
name = "picocraft_proto"
# description = ""
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
repository.workspace = true

[dependencies]
picocraft_core.workspace = true
picocraft_derive.workspace = true

log.workspace = true
bon.workspace = true

core-json-derive.workspace = true
core-json-traits.workspace = true

embedded-io-async.workspace = true

[features]
default = ["std"]
std = ["alloc"]
alloc = []
