[package]
name = "picocraft_terrain"
# description = ""
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
repository.workspace = true

[dependencies]

log.workspace = true

heapless.workspace = true

rand.workspace = true
rand_xoshiro.workspace = true
noise.workspace = true

picocraft_core.workspace = true
picocraft_proto.workspace = true

image = { version = "0.25.9", optional = true }


[features]
images = ["dep:image"]
